fix the background image and spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,6 +87,23 @@ a:hover {
   z-index: 0;
 }
 
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.3;
+}
+
 /* origin modal */
 .origin-modal {
   min-height: 100%;
